stash/svc.yaml
# plex/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stash
  namespace: stash
  annotations:
    io.cilium/lb-ipam-ips: 192.168.50.43
spec:
  selector:
    app: stash
  type: LoadBalancer
  ports:
    - port: 9999               # < port to open on the outside on the server
      targetPort: 9999         # < targetport. port on the pod to passthrough
      name: stash               # < reference name for the port in the deployment yaml
      protocol: TCP
